--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "access-control": "^1.0.1",
     "axios": "^0.18.0",
     "cors": "^2.8.5",
     "cors-proxy": "^1.0.3",
+    "if-env": "^1.0.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-xml-parser": "^1.1.2",
